--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 <body>
     
-    <h1>Welcome to</h1>
-    <h1 class="orangehead">SP SUJOY'S WORLD</h1>
+    <div>
+        <h1>Welcome to</h1>
+    <h1><span class="orangehead">SP SUJOY'S </span><span class="headworld">WORLD</span> </h1>
+    <h3>Beginner at web development and design</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, unde, cum odio ullam molestiae maxime quod exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam molestiae.</p>
+    </div>
     
 
 
