all set first page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,16 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <div>
-        <h1>Welcome to</h1>
-    <h1><span class="orangehead">SP SUJOY'S </span><span class="headworld">WORLD</span> </h1>
-    <h3>Beginner at web development and design</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, unde, cum odio ullam molestiae maxime quod exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam molestiae.</p>
+
+    <div class="section">
+        <div class="division">
+            <h1>Welcome to</h1>
+            <h1><span class="orangehead">SP SUJOY'S </span><span class="headworld">WORLD</span> </h1>
+            <h3>Beginner at web development and design</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, unde, cum odio ullam molestiae maxime
+                quod
+                exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam molestiae.
+            </p>
+        </div>
+        <img src="images/my-bg.png" alt="SP SUJOY">
     </div>
-    
+
 
 
 </body>
+
 </html>
