--- a/index.html
+++ b/index.html
@@ -10,22 +10,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/my-bg.png" type="image/img">
 </head>
 
 <body>
 
-    <div class="section">
-        <div class="division">
-            <h1>Welcome to</h1>
-            <h1><span class="orangehead">SP SUJOY'S </span><span class="headworld">WORLD</span> </h1>
-            <h3>Beginner at web development and design</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, unde, cum odio ullam molestiae maxime
-                quod
-                exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam molestiae.
-            </p>
+
+    <section>
+        <div class="headofall">
+            <div class="division">
+                <h1>Welcome to</h1>
+                <h1><span class="orangehead">SP SUJOY'S </span><span class="headworld">WORLD</span> </h1>
+                <h3>Beginner at web development and design</h3>
+                <p class="bio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, unde, cum odio ullam
+                    molestiae maxime
+                    quod
+                    exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam
+                    molestiae.
+                </p>
+            </div>
+
+            <img src="images/my-bg.png" alt="SP SUJOY">
+
         </div>
-        <img src="images/my-bg.png" alt="SP SUJOY">
-    </div>
+    </section>
+
 
 
 
