--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
                     molestiae maxime
                     quod
                     exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam
-                    molestiae.
+                    molestiae. Lorem ipsum dolor sit amet consectetur.
                 </p>
+
+                <a target="_blank" href=" https://www.linkedin.com/in/spsujoy/" class="mybtn">HIRE ME</a>
             </div>
 
             <img src="images/my-bg.png" alt="SP SUJOY">
 
         </div>
     </section>
-
 
 
 
