--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <section>
+    <section id="firstPage">
         <div class="headofall">
             <div class="division">
                 <h1>Welcome to</h1>
