Evething are new from this edit

--- a/index.html
+++ b/index.html
@@ -16,25 +16,23 @@
 <body>
 
 
-    <section id="firstPage">
-        <div class="headofall">
-            <div class="division">
-                <h1>Welcome to</h1>
-                <h1><span class="orangehead">SP SUJOY'S </span><span class="headworld">WORLD</span> </h1>
-                <h3>Beginner at web development and design</h3>
-                <p class="bio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, unde, cum odio ullam
-                    molestiae maxime
-                    quod
-                    exercitationem ut, molestias quis iste tempora a quisquam animi. Cumque dolor officiis quam
-                    molestiae. Lorem ipsum dolor sit amet consectetur.
-                </p>
+    <section>
 
-                <a target="_blank" href=" https://www.linkedin.com/in/spsujoy/" class="mybtn">HIRE ME</a>
-            </div>
-
-            <img src="images/my-bg.png" alt="SP SUJOY">
-
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1>SP SUJOY'S <span class="nameOfworld">WORLD</span></h1>
+            <h3>Beginner at web development and design</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ratione ut ullam rerum odio?
+                Sapiente
+                quasi vel soluta maiores tempora blanditiis eaque, aut animi temporibus accusamus similique
+            </p>
+            <a href="https://www.linkedin.com/spsujoy" target="_blank" class="mybtn">HIRE ME</a>
         </div>
+        <div class="half-width ">
+            <img class="firstPic" src="images/my-bg.png" alt="SP SUJOY">
+        </div>
+        </div>
+
     </section>
 
 
