second section done

--- a/index.html
+++ b/index.html
@@ -16,25 +16,41 @@
 <body>
 
 
-    <section>
+    <section class="firstSec">
 
-        <div class="half-width">
-            <h1>Welcome to</h1>
-            <h1>SP SUJOY'S <span class="nameOfworld">WORLD</span></h1>
-            <h3>Beginner at web development and design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ratione ut ullam rerum odio?
-                Sapiente
-                quasi vel soluta maiores tempora blanditiis eaque, aut animi temporibus accusamus similique
-            </p>
-            <a href="https://www.linkedin.com/spsujoy" target="_blank" class="mybtn">HIRE ME</a>
-        </div>
-        <div class="half-width ">
-            <img class="firstPic" src="images/my-bg.png" alt="SP SUJOY">
+        <div class="holeimg">
+            <div class="half-width">
+                <h1>Welcome to</h1>
+                <h1>SP SUJOY'S <span class="nameOfworld">WORLD</span></h1>
+                <h3>Beginner at web development and design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ratione ut ullam rerum odio?
+                    Sapiente
+                    quasi vel soluta maiores tempora blanditiis eaque, aut animi temporibus accusamus similique
+                </p>
+                <a href="https://www.linkedin.com/spsujoy" target="_blank" class="mybtn">HIRE ME</a>
+            </div>
+            <div class="half-width">
+                <img class="firstPic" src="images/my-bg.png">
+            </div>
         </div>
         </div>
 
     </section>
 
+    <section class="dream-big">
+
+        <div class="half-width">
+            <img src="images/my-bg2.png">
+        </div>
+
+        <div class="half-width">
+            <h1>Big dream</h1>
+            <h2>Become a web developer</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam ab cupiditate libero est recusandae
+                reiciendis magni qui amet, esse hic. Lorem ipsum dolor sit amet consectetur. </p>
+            <a href="#" class="mybtn" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 
 
 </body>
