Third section experience is created

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 
 
-    <section class="firstSec">
+    <section class="firstSec flexible-section">
 
         <div class="holeimg">
-            <div class="half-width">
+            <div class="half-width ">
                 <h1>Welcome to</h1>
-                <h1>SP SUJOY'S <span class="nameOfworld">WORLD</span></h1>
+                <h1>SP SUJOY'S <span class="orange">WORLD</span></h1>
                 <h3>Beginner at web development and design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ratione ut ullam rerum odio?
                     Sapiente
@@ -29,7 +29,7 @@
                 </p>
                 <a href="https://www.linkedin.com/spsujoy" target="_blank" class="mybtn">HIRE ME</a>
             </div>
-            <div class="half-width">
+            <div class="half-width widthsec">
                 <img class="firstPic" src="images/my-bg.png">
             </div>
         </div>
@@ -37,18 +37,43 @@
 
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-section">
 
         <div class="half-width">
             <img src="images/my-bg2.png">
         </div>
 
-        <div class="half-width">
+        <div class="half-width widthsec">
             <h1>Big dream</h1>
             <h2>Become a web developer</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam ab cupiditate libero est recusandae
                 reiciendis magni qui amet, esse hic. Lorem ipsum dolor sit amet consectetur. </p>
             <a href="#" class="mybtn" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+    <section class="Experience-aria">
+        <h1>Experiences</h1>
+        <div class="flexible-section">
+
+            <div class="half-width boxes">
+                <h2>Full Stack Web Developer </h2>
+                <h3 class="orange">2022-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere rem porro delectus, quae beatae
+                    sapiente
+                    recusandae quibusdam odit praesentium aspernatur. Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit. Minus quia quasi necessitatibus maiores vel et saepe laboriosam recusandae
+                    voluptatem aliquam!</p>
+            </div>
+            <div class="half-width widthsec boxes box2">
+                <h2>Baby Web Developer </h2>
+                <h3 class="orange">2023-2025 | Programming Hero Learner</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam et, asperiores magni modi
+                    voluptatem
+                    sint cumque doloremque adipisci corporis. Molestiae. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Iste ab cupiditate tenetur aut, eius distinctio quis consectetur cum ad sequi
+                    fuga, molestias numquam beatae voluptatem.</p>
+            </div>
         </div>
     </section>
 
